--- a/fruit.html
+++ b/fruit.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title> Shri Pahadi Balaji</title>
+  <title> Shri Pahadi Balajii</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
